2011-10-24  David King  <davidk@openismus.com>

  Replace progress dialog with infobar.

  Bug #661051

2011-10-21  Murray Cumming  <murrayc@murrayc.com>

	Avoid calling g_thread_init() if possible.

	* configure.ac: Add a comment about not linking to gthread-2.0 in future.
	* glom/libglom/init.cc:
	* tests/import/test_parsing.cc:
	* tests/import/test_signals.cc: Avoid calls to deprecated Glib::thread_init()
	if glib is new enough.
	This is a step to making Glom build against glibmm from git master with
	--enable-warnings=fatal.

2011-10-20  Murray Cumming  <murrayc@murrayc.com>

	libglom: Restore the Util::build_sql_select_count_row() API. 

	* glom/libglom/db_utils.cc: move it back to:
	* glom/libglom/utils.[h|cc]: because it is needed by java-libglom.

2011-10-20  Murray Cumming  <murrayc@murrayc.com>

	Self-hosting tests: Test with sqlite too.

	* tests/test_selfhosting_utils.[h|cc]: test_create_and_selfhost():
	Add a hosting_mode parameter so we can test sqlite too.
	Correct some return values and check that the directory really exists after
	it should have been created.
	* tests/test_selfhosting_new_empty.cc:
	* tests/test_selfhosting_new_from_example.cc:
	* tests/test_selfhosting_new_then_report.cc:
	* tests/test_selfhosting_sqlinjection.cc: Restructure so all tests are run 
	twice - once for each backend.
	
2011-10-20  Murray Cumming  <murrayc@murrayc.com>

	SQLite: Avoid reporting failure when recreating databases.

	* glom/libglom/db_utils.[h|cc]: recreate_database_from_document(): Do not 
	call add_standard_tables() and add_standard_groups() because create_database()
	(which we call) has already done this.
	query_execute_string(): Only -1 is an error, though that is odd.
	See libgda bug #662279 .

2011-10-20  Murray Cumming  <murrayc@murrayc.com>

	Replaced Utils::build_sql_select_count_row() with DbUtils::count_rows_returned_by().

	* glom/libglom/utils.cc:
	* glom/base_db.[h|cc]: Moved count_rows_returned_by() to 