@@ -2938,4 +2938,26 @@ void Application::clear_progress_message()
   m_infobar_progress->hide();
 }
 
+
+ShowProgressMessage::ShowProgressMessage(const Glib::ustring& message)
+: m_app(dynamic_cast<Application*>(Application::get_application())),
+  m_message(message)
+{
+  g_return_if_fail(m_app);
+  m_app->set_progress_message(message);
+};
+
+ShowProgressMessage::~ShowProgressMessage()
+{
+  g_return_if_fail(m_app);
+  m_app->clear_progress_message();
+};
+
+void ShowProgressMessage::pulse()
+{
+  g_return_if_fail(m_app);
+  m_app->set_progress_message(m_message);
+};
+
+
 } //namespace Glom
